# s3test

./: .env  Cargo.toml
src/: main.rs
