[package]
name = "s3test"
version = "0.1.0"
authors = ["reasv <7143787+reasv@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6.4", features = ["full"] }
rust-s3 = "0.27.0-beta11"
dotenv = "0.15.0"
